Yet another panelset refactoring

--- a/demo/b-panelset.html
+++ b/demo/b-panelset.html
@@ -37,7 +37,7 @@
         </div>
 
         <h2>Accordion with height transition</h2>
-        <div class="element-demo" id="accordion-demo">
+        <div class="element-demo" id="accordion-height-transition-demo">
             <b-panelset entry-transition="expand-height" exit-transition="collapse-height">
                 <b-panel>
                     <b-panel-title>Lorem ipsum 1</b-panel-title>
@@ -57,6 +57,42 @@
         <h2>Tabs</h2>
         <div class="element-demo" id="tabs-demo">
             <b-panelset preferreddisplay="tabs">
+                <b-panel>
+                    <b-panel-title>Lorem ipsum 1</b-panel-title>
+                    <p>Lorem ipsum 1 dolor sit amet, consectetur adipiscing elit. Curabitur sapien sapien, ultrices eget posuere sed, facilisis at orci. Maecenas dignissim enim in magna iaculis consequat. Sed posuere mattis tellus, ut pharetra purus sagittis a. Praesent vitae nunc quis est commodo tincidunt quis vel nulla. Aenean scelerisque lectus sed consectetur vulputate. Phasellus porttitor justo quis orci scelerisque, cursus rutrum quam interdum. Aenean magna tellus, fringilla ac metus quis, ornare fringilla arcu. Praesent at nisl neque.</p>
+                </b-panel>
+                <b-panel>
+                    <b-panel-title>Lorem ipsum 2</b-panel-title>
+                    <p>Lorem ipsum 2 dolor sit amet, consectetur adipiscing elit. Curabitur sapien sapien, ultrices eget posuere sed, facilisis at orci. Maecenas dignissim enim in magna iaculis consequat. Sed posuere mattis tellus, ut pharetra purus sagittis a. Praesent vitae nunc quis est commodo tincidunt quis vel nulla. Aenean scelerisque lectus sed consectetur vulputate. Phasellus porttitor justo quis orci scelerisque, cursus rutrum quam interdum. Aenean magna tellus, fringilla ac metus quis, ornare fringilla arcu. Praesent at nisl neque.</p>
+                </b-panel>
+                <b-panel>
+                    <b-panel-title>Lorem ipsum 3</b-panel-title>
+                    <p>Lorem ipsum 3 dolor sit amet, consectetur adipiscing elit. Curabitur sapien sapien, ultrices eget posuere sed, facilisis at orci. Maecenas dignissim enim in magna iaculis consequat. Sed posuere mattis tellus, ut pharetra purus sagittis a. Praesent vitae nunc quis est commodo tincidunt quis vel nulla. Aenean scelerisque lectus sed consectetur vulputate. Phasellus porttitor justo quis orci scelerisque, cursus rutrum quam interdum. Aenean magna tellus, fringilla ac metus quis, ornare fringilla arcu. Praesent at nisl neque.</p>
+                </b-panel>
+            </b-panelset>
+        </div>
+
+        <h2>Tabs with opacity transition</h2>
+        <div class="element-demo" id="tabs-opacity-transition-demo">
+            <b-panelset preferreddisplay="tabs" entry-transition="fade-in" exit-transition="fade-in">
+                <b-panel>
+                    <b-panel-title>Lorem ipsum 1</b-panel-title>
+                    <p>Lorem ipsum 1 dolor sit amet, consectetur adipiscing elit. Curabitur sapien sapien, ultrices eget posuere sed, facilisis at orci. Maecenas dignissim enim in magna iaculis consequat. Sed posuere mattis tellus, ut pharetra purus sagittis a. Praesent vitae nunc quis est commodo tincidunt quis vel nulla. Aenean scelerisque lectus sed consectetur vulputate. Phasellus porttitor justo quis orci scelerisque, cursus rutrum quam interdum. Aenean magna tellus, fringilla ac metus quis, ornare fringilla arcu. Praesent at nisl neque.</p>
+                </b-panel>
+                <b-panel>
+                    <b-panel-title>Lorem ipsum 2</b-panel-title>
+                    <p>Lorem ipsum 2 dolor sit amet, consectetur adipiscing elit. Curabitur sapien sapien, ultrices eget posuere sed, facilisis at orci. Maecenas dignissim enim in magna iaculis consequat. Sed posuere mattis tellus, ut pharetra purus sagittis a. Praesent vitae nunc quis est commodo tincidunt quis vel nulla. Aenean scelerisque lectus sed consectetur vulputate. Phasellus porttitor justo quis orci scelerisque, cursus rutrum quam interdum. Aenean magna tellus, fringilla ac metus quis, ornare fringilla arcu. Praesent at nisl neque.</p>
+                </b-panel>
+                <b-panel>
+                    <b-panel-title>Lorem ipsum 3</b-panel-title>
+                    <p>Lorem ipsum 3 dolor sit amet, consectetur adipiscing elit. Curabitur sapien sapien, ultrices eget posuere sed, facilisis at orci. Maecenas dignissim enim in magna iaculis consequat. Sed posuere mattis tellus, ut pharetra purus sagittis a. Praesent vitae nunc quis est commodo tincidunt quis vel nulla. Aenean scelerisque lectus sed consectetur vulputate. Phasellus porttitor justo quis orci scelerisque, cursus rutrum quam interdum. Aenean magna tellus, fringilla ac metus quis, ornare fringilla arcu. Praesent at nisl neque.</p>
+                </b-panel>
+            </b-panelset>
+        </div>
+
+        <h2>Tabs with slide transition</h2>
+        <div class="element-demo" id="tabs-slide-transition-demo">
+            <b-panelset preferreddisplay="tabs" entry-transition="slide-from-right" exit-transition="slide-left">
                 <b-panel>
                     <b-panel-title>Lorem ipsum 1</b-panel-title>
                     <p>Lorem ipsum 1 dolor sit amet, consectetur adipiscing elit. Curabitur sapien sapien, ultrices eget posuere sed, facilisis at orci. Maecenas dignissim enim in magna iaculis consequat. Sed posuere mattis tellus, ut pharetra purus sagittis a. Praesent vitae nunc quis est commodo tincidunt quis vel nulla. Aenean scelerisque lectus sed consectetur vulputate. Phasellus porttitor justo quis orci scelerisque, cursus rutrum quam interdum. Aenean magna tellus, fringilla ac metus quis, ornare fringilla arcu. Praesent at nisl neque.</p>
