--- a/test/index.html
+++ b/test/index.html
@@ -21,7 +21,8 @@
                 'elements/b-dialog.html',
                 'elements/b-notification.html',
                 'elements/b-switch.html',
-                'elements/b-panel.html'
+                'elements/b-panel.html',
+                'elements/b-panelset.html'
             ]);
         </script>
     </body>
