Added selection support to b-listbox

--- a/demo/b-listbox.html
+++ b/demo/b-listbox.html
@@ -12,8 +12,27 @@
     </head>
 
     <body>
+        <h2>Basic</h2>
         <div class="element-demo" id="example1">
             <b-listbox>
+                <b-item>Top</b-item>
+                <b-item>Middle</b-item>
+                <b-item>Bottom</b-item>
+            </b-listbox>
+        </div>
+
+        <h2>Pre-selected</h2>
+        <div class="element-demo" id="example2">
+            <b-listbox selected="0">
+                <b-item>Top</b-item>
+                <b-item>Middle</b-item>
+                <b-item>Bottom</b-item>
+            </b-listbox>
+        </div>
+
+        <h2>Multi-select</h2>
+        <div class="element-demo" id="example3">
+            <b-listbox multiple>
                 <b-item>Top</b-item>
                 <b-item>Middle</b-item>
                 <b-item>Bottom</b-item>
